# xmms-gtk2

./: ABOUT-NLS  AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  wmxmms.1.in  xmms-config.in  xmms.1.in  xmms.spec  xmms.spec.in
Effect/: Makefile.am  Makefile.in
Effect/echo_plugin/: Makefile.am  Makefile.in  echo.c  gui.c
Effect/stereo_plugin/: Makefile.am  Makefile.in  stereo.c
Effect/voice/: Makefile.am  Makefile.in  about.c  voice.c  voice.h
General/: Makefile.am  Makefile.in
General/ir/: Makefile.am  Makefile.in  about.c  configure.c  ir.c  ir.h  irfunc.c  irio.c  irman.h
General/joystick/: Makefile.am  Makefile.in  about.c  configure.c  joy.c  joy.h
General/song_change/: Makefile.in  song_change.c
Input/: Makefile.am  Makefile.in
Input/cdaudio/: Makefile.am  Makefile.in  cdaudio.c  cdaudio.h  cddb.c  cddb.h  cdinfo.c  cdinfo.h  configure.c  http.c  http.h
Input/mikmod/: Makefile.in  drv_xmms.c  mikmod-plugin.h  plugin.c
Input/mpg123/: Makefile.am  Makefile.in  common.c  configure.c  decode.c  decode_2to1.c  decode_4to1.c  decode_i586.s  dxhead.c  dxhead.h  equalizer.c  fileinfo.c  http.c  id3.c  id3.h  id3_frame.c  id3_frame_content.c  id3_frame_text.c  id3_frame_url.c  id3_header.h  id3_tag.c  layer1.c  layer2.c  layer3.c  mpg123.c  mpg123.h  tabinit.c  unicode.c
Input/tonegen/: Makefile.in  tonegen.c
Input/vorbis/: Makefile.am  Makefile.in  configure.c  fileinfo.c  http.c  http.h  vcedit.c  vcedit.h  vorbis.c  vorbis.h
Input/wav/: Makefile.am  Makefile.in  wav.c  wav.h
Output/: Makefile.am  Makefile.in
Output/OSS/: Makefile.am  Makefile.in  OSS.c  OSS.h  about.c  audio.c  configure.c  convert.c  init.c  mixer.c  soundcard.h
Output/alsa/: Makefile.am  Makefile.in  alsa.h  audio.c  configure.c  init.c
Output/disk_writer/: Makefile.in  disk_writer.c
Output/esd/: Makefile.am  Makefile.in  about.c  audio.c  configure.c  esd.c  esdout.h  init.c  mixer.c
Output/solaris/: Makefile.am  Makefile.in  README.solaris  Sun.c  Sun.h  about.c  audio.c  configure.c  init.c
Output/sun/: Makefile.am  Makefile.in  about.c  audio.c  configure.c  sun.c  sun.h
Visualization/: Makefile.am  Makefile.in
Visualization/blur_scope/: Makefile.am  Makefile.in  blur_scope.c  blur_scope.h  config.c
Visualization/opengl_spectrum/: Makefile.am  Makefile.in  configure.c
Visualization/sanalyzer/: Makefile.am  Makefile.in  spectrum.c  xmms_logo.xpm
libxmms/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  charset.c  charset.h  config.h.in  configfile.c  configfile.h  configure  configure.in  dirbrowser.c  dirbrowser.h  formatter.c  titlestring.c  titlestring.h  util.c  util.h  xconvert.c  xconvert.h  xentry.c  xentry.h  xmmsctrl.c  xmmsctrl.h
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  af.gmo  af.po  az.gmo  az.po  be.gmo  be.po  bg.gmo  bg.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  cy.gmo  cy.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en.gmo  en.po  en_GB.gmo  en_GB.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  (+75 more)
wmxmms/: Makefile.am  Makefile.in  wmxmms.c  wmxmms.xpm  xmms-dock-master.xpm
xmms/: Makefile.am  Makefile.in  about.c  bmp.c  bmp.h  controlsocket.c  controlsocket.h  dnd.h  dock.c  dock.h  effect.c  effect.h  eq_graph.c  eq_graph.h  eq_slider.c  eq_slider.h  equalizer.c  equalizer.h  fullscreen.c  general.c  general.h  hints.c  hints.h  hslider.c  hslider.h  i18n.h.in  input.c  input.h  main.c  main.h  menurow.c  menurow.h  mkdtemp.c  monostereo.c  monostereo.h  number.c  number.h  output.c  output.h  pbutton.c  (+45 more)
